2003-04-15
  Fixed typo in Mark Watson link
  Changed CLiki link in pattern_matching.html
  Added link to The Dynamic Learning Center

2003-03-18
  Changed cw-usedefault to cw_usedefault in some code

2003-03-18
  Added win32.html by Jeff Caldwell last week
  Incoporating suggested changes from Kenny Tilton and Edi Weitz
  Maintaining CHANGELOG
  Including Paul Tarvydas and Kenny Tilton as contributors
  Provided an introduction to Paul Tarvydas's code
  Changed link to Petzold's book
  Changed wm-close to wm_close, making the move from Petzold to the Lisp code a slightly more seamless
  A few stylistic changes
  Included :dbcs decision made at run time, not compile time.   

2002-12-26
  Fixed some typos in misc.html, license.html, and in this file

2002-12-25
  Slight changes to macros.html to make it look like the rest of the cookbook
  Added initial entry for macros.html to CHANGELOG
  Added new chapter 'Miscellaneous'
  Linked misc.html from index.html
  Added section 'Re-using complex data structures' (originally by Marco Antoniotti) to 'Miscellaneous'
  Added section 'Using ADJUST-ARRAY instead of consing up...' (originally by Pierpaolo Bernardi) to 'Miscellaneous'
  Added Marco Antoniotti and Pierpaolo Bernardi to the list of contributors
  Added Pascal Constanza's guide to link section
  Added Mark Watson's book to link section

2002-10-22
  Updated windows.html and .emacs by Bill Clementson to revert to Corman Lisp 1.5 due to problems with running clconsole.exe inside of emacs in version 2.0.

2002-10-21
  Updated windows.html and .emacs by Bill Clementson to add support for Corman Lisp 2.0, removed instructions for the w3 utility (not necessary for viewing documentation) and provide support in .emacs for auto-detecting which lisp implementations have been installed.

2002-10-15
  Updated windows.html by Bill Clementson to include instructions to change lisp-used, EMACSDIR & ILISPDIR variables.

2002-09-23