@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.18 2002/10/21 16:57:44 bill_clementson Exp $	 -->
+<!-- 	$Header: /cvsroot/cl-cookbook/cl-cookbook/windows.html,v 1.19 2002/10/22 14:44:44 bill_clementson Exp $	 -->
 <html>
 
 <head>
@@ -93,10 +93,10 @@ md c:\home\lisp\
 md c:\bin\     </pre>
   </li>
   <li>Download the precompiled <a href="http://www.gnu.org/software/emacs/">Emacs</a>
-    binaries for Windows from <a href="ftp://ftp.gnu.org/gnu/windows/emacs/21.2/emacs-21.2-fullbin-i386.tar.gz">ftp://ftp.gnu.org/gnu/windows/emacs/21.2/emacs-21.2-fullbin-i386.tar.gz</a>
+    binaries for Windows from <a href="ftp://ftp.gnu.org/gnu/windows/emacs/21.3/emacs-21.3-fullbin-i386.tar.gz">ftp://ftp.gnu.org/gnu/windows/emacs/21.3/emacs-21.3-fullbin-i386.tar.gz</a>
     and use Winzip to unpack the files into the c:\bin directory. This should
-    result in a new directory: c:\bin\emacs-21.2</li>
-  <li>Using Run on the Windows Start menu, enter &quot;c:\bin\emacs-21.2\bin\runemacs.exe&quot;
+    result in a new directory: c:\bin\emacs-21.3</li>
+  <li>Using Run on the Windows Start menu, enter &quot;c:\bin\emacs-21.3\bin\runemacs.exe&quot;
     to verify that the program works. On the Help menu, there is an Emacs
     on-line tutorial. If you are unfamiliar with Emacs, you should (at least)
     complete this tutorial before proceeding any further. The remainder of this
@@ -115,7 +115,7 @@ Emacs utilities</a></h3>
     settings given below.</li>
 </ul>
 <blockquote>
-  <pre>set EMACSDIR=c:\bin\emacs-21.2
+  <pre>set EMACSDIR=c:\bin\emacs-21.3
 set ILISPDIR=c:\home\site\ilisp</pre>
 </blockquote>
 <ul>
@@ -245,10 +245,10 @@ lispworks-4200 -init c:\home\lisp\console.lisp</pre>
       leave the system one if you want multiple login users to use your same
       emacs configuration) and make certain that it is set to the c:\home
       directory.).</li>
-    <li>EMACSDIR: Should be set to c:\bin\emacs-21.2</li>
-    <li>PATH: The c:\bin\emacs-21.2\bin directory path should be prepended to
+    <li>EMACSDIR: Should be set to c:\bin\emacs-21.3</li>
+    <li>PATH: The c:\bin\emacs-21.3\bin directory path should be prepended to
       the existing PATH to ensure that the Emacs executable can be found (e.g.
-      -- set path=c:\bin\emacs-21.2\bin;%path%).</li>
+      -- set path=c:\bin\emacs-21.3\bin;%path%).</li>
   </ul>
 </blockquote>
 <ul>
